force-app/main/default/objects/ChangeEventSettings__c/ChangeEventSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ChangeEventSettings</label>
</CustomObject>