force-app/main/default/objects/ChangeEventSettings__c/fields/ChangePublishUrl__c.field-meta.xml
<CustomField>
    <fullName>ChangePublishUrl__c</fullName>
    <label>ChangePublishUrl</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>