force-app/main/default/objects/ChangeEventSettings__c/fields/PublishApiHeaderName__c.field-meta.xml
<CustomField>
    <fullName>PublishApiHeaderName__c</fullName>
    <label>PublishApiHeaderName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>