force-app/main/default/objects/ChangeEventSettings__c/fields/PublishApiKey__c.field-meta.xml
<CustomField>
    <fullName>PublishApiKey__c</fullName>
    <label>PublishApiKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>