force-app/main/default/objects/ChangeEventSettings__c/fields/SendFullPayload__c.field-meta.xml
<CustomField>
    <fullName>SendFullPayload__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SendFullPayload</label>
    <type>Checkbox</type>
</CustomField>